--- a/05.국회의원현황_New2025.ipynb
+++ b/05.국회의원현황_New2025.ipynb
@@ -41,7 +41,7 @@
       "https://www.assembly.go.kr/portal/cnts/cntsNaas/findNaasThx01.json?pageIndex=29\n",
       "https://www.assembly.go.kr/portal/cnts/cntsNaas/findNaasThx01.json?pageIndex=30\n",
       "300\n",
-      "[{'rnum': 1, 'monaCd': 'T2T8225E', 'hgNm': '강경숙', 'openNaId': 'KANGKYUNGSOOK', 'st': '22', 'unitNm': '제22대', 'polyNm': '조국혁신당', 'origNm': '비례대표', 'electGbnNm': '비례대표', 'cmitNm': '교육위원회', 'reeleGbnNm': '초선', 'sexGbnNm': '여', 'mImgUrl': '/static/portal/img/openassm/new/68f83caf0c9e4546b1694ead863f45ce.jpg', 'mThumbImgUrl': '/static/portal/img/openassm/new/thumb/68f83caf0c9e4546b1694ead863f45ce.jpg', 'mLinkUrl': '/members/22nd/KANGKYUNGSOOK'}, {'rnum': 2, 'monaCd': 'L2I9861C', 'hgNm': '강대식', 'openNaId': 'KANGDAESIK', 'st': '22', 'unitNm': '제22대', 'polyNm': '국민의힘', 'origNm': '대구 동구군위군을', 'electGbnNm': '지역구', 'cmitNm': '국방위원회', 'reeleGbnNm': '재선', 'sexGbnNm': '남', 'mImgUrl': '/static/portal/img/openassm/new/d1fe9f0902d84f0ba74f721d3298be7f.png', 'mThumbImgUrl': '/static/portal/img/openassm/new/thumb/d1fe9f0902d84f0ba74f721d3298be7f.png', 'mLinkUrl': '/members/22nd/KANGDAESIK'}, {'rnum': 3, 'monaCd': '8P37634C', 'hgNm': '강득구', 'openNaId': 'KANGDEUKGU', 'st': '22', 'unitNm': '제22대', 'polyNm': '더불어민주당', 'origNm': '경기 안양시만안구', 'electGbnNm': '지역구', 'cmitNm': '환경노동위원회', 'reeleGbnNm': '재선', 'sexGbnNm': '남', 'mImgUrl': '/static/portal/img/openassm/new/0410a0c8e24b474cac2fd79c7700ca2f.jpg', 'mThumbImgUrl': '/static/portal/img/openassm/new/thumb/0410a0c8e24b474cac2fd79c7700ca2f.jpg', 'mLinkUrl': '/members/22nd/KANGDEUKGU'}]\n"
+      "[{'rnum': 1, 'monaCd': 'T2T8225E', 'hgNm': '강경숙', 'openNaId': 'KANGKYUNGSOOK', 'st': '22', 'unitNm': '제22대', 'polyNm': '조국혁신당', 'origNm': '비례대표', 'electGbnNm': '비례대표', 'cmitNm': '교육위원회', 'reeleGbnNm': '초선', 'sexGbnNm': '여', 'mImgUrl': '/static/portal/img/openassm/new/68f83caf0c9e4546b1694ead863f45ce.jpg', 'mThumbImgUrl': '/static/portal/img/openassm/new/thumb/68f83caf0c9e4546b1694ead863f45ce.jpg', 'mLinkUrl': '/members/22nd/KANGKYUNGSOOK'}, {'rnum': 2, 'monaCd': 'L2I9861C', 'hgNm': '강대식', 'openNaId': 'KANGDAESIK', 'st': '22', 'unitNm': '제22대', 'polyNm': '국민의힘', 'origNm': '대구 동구군위군을', 'electGbnNm': '지역구', 'cmitNm': '국방위원회', 'reeleGbnNm': '재선', 'sexGbnNm': '남', 'mImgUrl': '/static/portal/img/openassm/new/d1fe9f0902d84f0ba74f721d3298be7f.png', 'mThumbImgUrl': '/static/portal/img/openassm/new/thumb/d1fe9f0902d84f0ba74f721d3298be7f.png', 'mLinkUrl': '/members/22nd/KANGDAESIK'}, {'rnum': 3, 'monaCd': '8P37634C', 'hgNm': '강득구', 'openNaId': 'KANGDEUKGU', 'st': '22', 'unitNm': '제22대', 'polyNm': '더불어민주당', 'origNm': '경기 안양시만안구', 'electGbnNm': '지역구', 'cmitNm': '환경노동위원회, 기후위기 특별위원회', 'reeleGbnNm': '재선', 'sexGbnNm': '남', 'mImgUrl': '/static/portal/img/openassm/new/0410a0c8e24b474cac2fd79c7700ca2f.jpg', 'mThumbImgUrl': '/static/portal/img/openassm/new/thumb/0410a0c8e24b474cac2fd79c7700ca2f.jpg', 'mLinkUrl': '/members/22nd/KANGDEUKGU'}]\n"
      ]
     }
    ],
@@ -173,7 +173,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
